fix flicker issue in safari

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -14,6 +14,7 @@ body {
 
 .carousel-image {
   max-height: calc(100vh - 220px);
+  transform:translateZ(0)
 }
 
 .carousel-image:hover {
